# metamodule-wildergarden

./: CMakeLists.txt  plugin-mm.json
metamodule-plugins/: Wildergarden.mmplugin
wildergarden-vcv/: .gitignore  plugin.json
wildergarden-vcv/.github/workflows/: build-plugin.yml
wildergarden-vcv/docs/: Manual.md
wildergarden-vcv/res/: labelNumberer.py
wildergarden-vcv/src/: Pascal.cpp  dimit.cpp  plugin.cpp  plugin.hpp
